# scraple

./: LICENSE  README.md  pyproject.toml
doc/: documentation.md
doc/code_example/: Modified quotes to scrape.html  example_code.py
doc/code_example/Modified quotes to scrape_files/: bootstrap.min.css
src/scraple/: TreeCore.py  Tree_search_engine.py  __init__.py  error.py  extract.py  pipeline.py
