[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "scraple"
version = "0.1.1"
authors = [
  { name="Jibril", email="erikfortran@gmail.com" },
]
description = "Simplify web scraping"
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["simple", "CSS", "selector", "scraping", "webscraping"]
license = {file = "LICENSE"}

dependencies =[
"beautifulsoup4 >=4.0.0",
]

[project.urls]
repository = "https://github.com/max-efort/scraple"
